--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>/* Metrika</script>
+    <script>/* Analytics */</script>
 </head>
 <body>
     <a href="payment.html">Pay</a>
